--- a/build.gradle
+++ b/build.gradle
@@ -116,11 +116,11 @@ jar {
     manifest {
         attributes([
             "Specification-Title": "moremobgriefingoptions",
-            "Specification-Vendor": "moremobgriefingoptionssareus",
+            "Specification-Vendor": "GeheimagentNr1",
             "Specification-Version": "${version}", // We are version 1 of ourselves
             "Implementation-Title": project.name,
             "Implementation-Version": "${version}",
-            "Implementation-Vendor" :"moremobgriefingoptionssareus",
+            "Implementation-Vendor" :"GeheimagentNr1",
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
