--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,16 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
+mod_name=MoreMobGriefingOptions
+mod_id=moremobgriefingoptions
+modder=GeheimagentNr1
+domain=de.geheimagentnr1
 major_version=1
 minor_version=0
 patch_version=0
 
-mcp_mc_version=1.14.3
-mcp_version=20191130
+mcp_channel=stable
+mcp_mc_version=1.14.4
+mcp_version=58
 mc_version=1.14.4
-forge_version=28.1.96
+forge_version=28.2.18
