--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -14,7 +14,7 @@ loaderVersion="[31,)" #mandatory (26 is current forge version)
 # The modid of the mod
 modId="moremobgriefingoptions" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-version="0.1.0" #mandatory
+version="${file.jarVersion}" #mandatory
  # A display name for the mod
 displayName="More MobGriefing Options" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification <here>
