--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ patch_version=3
 # Mod deployment config
 mod_display_name=More MobGriefing Options
 curseforge_project_id=389013
-modrinth_project_it=
+modrinth_project_id=
 usableOnClientSide=true
 usableOnServerSide=true
 #For debugging: gradlew modrinth -PuploadDebug=true
